# mp_project

./: .env.dev  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/profiles/: models.py
