[tool.poetry]
name = "mp_project"
version = "0.1.0"
description = "Social Network"
authors = ["Staidyt"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Pillow = "^9.1.0"
psycopg2 = "^2.9.3"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
